Added Completed Button Added Partial Added functionality to both elements with Css Added Path Helper Added new route and completed tasks controller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+.completed {
+    text-decoration: line-through; }
+.completed form {
+    display: none; }
+
